chui o 5eme boutton je dis juste comprendre pk il fo mettre un num==math.trunc(num/10)

--- a/index.html
+++ b/index.html
@@ -8,23 +8,43 @@
     <title>mon site web</title>
 </head>
 <body>
-
-    <button id="nombre_decimaux" onclick="nombreDcimaux()">donne le nombre plein et le nombre decimaux</button></br>
-    <button id="exercice_loyer" onclick="loyer()">exercice loyer</button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
-    <button id="" onclick=""></button></br>
+    <h1 class="titre">Mon site web</h1>
+    <br>
+    
+    <button id="nombre_decimaux" class="exo" onclick="nombreDcimaux()">donne le nombre plein et le nombre decimaux</button></br>
+    <button id="exercice_loyer" class="exo" onclick="loyer()">exercice loyer</button></br>
+    <button id="formulair_user" class="exo" onclick="formulairUser()">Formulaire user</button></br>
+    <button id="trouver_name" class="exo" onclick="trouverName()">trouver le bon prenom</button></br>
+    <button id="inverse_le_num" class="exo" onclick="inversNum()">tape un chiffre et il s'affichera a l'envers</button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
+    <button id="" class="exo" onclick=""></button></br>
 
 
 
