j'ai mis directement le 13eme boutton celui des voiture avec le formulaire je dois faire la fonction annule et le formulaire

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <button id="" class="exo" onclick=""></button></br>
     <button id="" class="exo" onclick=""></button></br>
     <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
+    <button id="liste_de_voiture_et_formulaire" class="exo" onclick="laCentral()">liste de voiture avec formulaire pour ajouter des voiture et pour selectionner des voitures</button></br>
+    <button id="a" class="exo" onclick=""></button></br>
     <button id="" class="exo" onclick=""></button></br>
     <button id="" class="exo" onclick=""></button></br>
     <button id="" class="exo" onclick=""></button></br>
