--- a/index.html
+++ b/index.html
@@ -4,47 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>mon site web</title>
 </head>
 <body>
     <h1 class="titre">Mon site web</h1>
     <br>
+    <button id="nombre_decimaux" class="exo btn" onclick="nombreDcimaux()">donne le nombre plein et le nombre decimaux</button></br>
+    <button id="exercice_loyer" class="exo btn" onclick="loyer()">exercice loyer</button></br>
+    <button id="formulair_user" class="exo btn" onclick="formulairUser()">Formulaire user</button></br>
+    <button id="trouver_name" class="exo btn" onclick="trouverName()">trouver le bon prenom</button></br>
+    <button id="inverse_le_num" class="exo btn" onclick="inversNum()">tape un chiffre et il s'affichera a l'envers</button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="liste_de_voiture_et_formulaire" class="exo btn" onclick="laCentral()">liste de voiture avec formulaire pour ajouter des voiture et pour selectionner des voitures</button></br>
     
-    <button id="nombre_decimaux" class="exo" onclick="nombreDcimaux()">donne le nombre plein et le nombre decimaux</button></br>
-    <button id="exercice_loyer" class="exo" onclick="loyer()">exercice loyer</button></br>
-    <button id="formulair_user" class="exo" onclick="formulairUser()">Formulaire user</button></br>
-    <button id="trouver_name" class="exo" onclick="trouverName()">trouver le bon prenom</button></br>
-    <button id="inverse_le_num" class="exo" onclick="inversNum()">tape un chiffre et il s'affichera a l'envers</button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="liste_de_voiture_et_formulaire" class="exo" onclick="laCentral()">liste de voiture avec formulaire pour ajouter des voiture et pour selectionner des voitures</button></br>
-    <button id="a" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
-    <button id="" class="exo" onclick=""></button></br>
+    <div class="formulaire-add-car">
+        <label name="marque" class="lbl">marque</label>
+        <input type="text" name="marque" id="marque" placeholder="EX:bmw" class="input-formulaire">
+        <br>
+        <label name="model" class="lbl">model</label>
+        <input type="text" name="model" id="model" placeholder="EX:I8" class="input-formulaire">
+        <br>
+        <label name="prix" class="lbl">prix</label>
+        <input type="text" name="prix" id="prix" placeholder="EX:100 000 $" class="input-formulaire">
+        <br>
+        <p class="cathegorie-check">cathegorie</p>
+        <label name="economique" class="cathegorie-car lbl">economique</label>
+        <input type="checkbox" name="economique" id="economique" value="economique">
+
+        <label name="sport" class="cathegorie-car lbl">sport</label>
+        <input type="checkbox" name="sport" id="sport" value="sport">
+
+        <label name="luxe" class="cathegorie-car lbl">luxe</label>
+        <input type="checkbox" name="luxe" id="luxe" value="luxe">
+
+        <label name="berline" class="cathegorie-car lbl">berline</label>
+        <input type="checkbox" name="berline" id="berline" value="berline">
+
+        <label name="famille" class="cathegorie-car lbl">famille</label>
+        <input type="checkbox" name="famille" id="famille" value="famille">
+
+        <label name="electric" class="cathegorie-car lbl">electric</label>
+        <input type="checkbox" name="electric" id="electric" value="electric">
+
+        <label name="autre" class="cathegorie-car lbl autre" id="autre-label">autre</label>
+        <input type="checkbox" name="autre" id="autre" value="autre" class="autre" >
+        <br>
+        <button id="btn-vendre" class="btn">vendre la voiture</button>
+    </div>
+
+    <button id="a" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""></button></br>
 
 
 
