--- a/index.html
+++ b/index.html
@@ -27,38 +27,40 @@
     <button id="liste_de_voiture_et_formulaire" class="exo btn" onclick="laCentral()">liste de voiture avec formulaire pour ajouter des voiture et pour selectionner des voitures</button></br>
     
     <div class="formulaire-add-car">
-        <label name="marque" class="lbl">marque</label>
-        <input type="text" name="marque" id="marque" placeholder="EX:bmw" class="input-formulaire">
+        <label name="marqu" class="lbl">marque</label>
+        <input type="text" name="marqu" id="marqu" placeholder="EX:bmw" class="input-formulaire">
         <br>
         <label name="model" class="lbl">model</label>
         <input type="text" name="model" id="model" placeholder="EX:I8" class="input-formulaire">
         <br>
-        <label name="prix" class="lbl">prix</label>
-        <input type="text" name="prix" id="prix" placeholder="EX:100 000 $" class="input-formulaire">
+        <label name="price" class="lbl">prix</label>
+        <input type="text" name="price" id="price" placeholder="EX:100 000 $" class="input-formulaire">
+        <br>
+        <input type="file" name="image" id="image-file">
         <br>
         <p class="cathegorie-check">cathegorie</p>
         <label name="economique" class="cathegorie-car lbl">economique</label>
-        <input type="checkbox" name="economique" id="economique" value="economique">
+        <input class="input-cat" type="checkbox" name="economique" id="economique" value="economique">
 
         <label name="sport" class="cathegorie-car lbl">sport</label>
-        <input type="checkbox" name="sport" id="sport" value="sport">
+        <input class="input-cat" type="checkbox" name="sport" id="sport" value="sport">
 
         <label name="luxe" class="cathegorie-car lbl">luxe</label>
-        <input type="checkbox" name="luxe" id="luxe" value="luxe">
+        <input class="input-cat" type="checkbox" name="luxe" id="luxe" value="luxe">
 
         <label name="berline" class="cathegorie-car lbl">berline</label>
-        <input type="checkbox" name="berline" id="berline" value="berline">
+        <input class="input-cat" type="checkbox" name="berline" id="berline" value="berline">
 
         <label name="famille" class="cathegorie-car lbl">famille</label>
-        <input type="checkbox" name="famille" id="famille" value="famille">
+        <input class="input-cat" type="checkbox" name="famille" id="famille" value="famille">
 
         <label name="electric" class="cathegorie-car lbl">electric</label>
-        <input type="checkbox" name="electric" id="electric" value="electric">
+        <input class="input-cat" type="checkbox" name="electric" id="electric" value="electric">
 
         <label name="autre" class="cathegorie-car lbl autre" id="autre-label">autre</label>
-        <input type="checkbox" name="autre" id="autre" value="autre" class="autre" >
+        <input class="input-cat" type="checkbox" name="autre" id="autre" value="autre" class="autre" >
         <br>
-        <button id="btn-vendre" class="btn">vendre la voiture</button>
+        <button id="btn-vendre" class="btn" onclick="ajouter()">vendre la voiture</button>
     </div>
 
     <button id="a" class="exo btn" onclick=""></button></br>
