JE DOI METTRE UN SWITCH POUR LE CHRONO

--- a/index.html
+++ b/index.html
@@ -61,9 +61,12 @@
         <input class="input-cat" type="checkbox" name="autre" id="autre" value="autre" class="autre" >
         <br>
         <button id="btn-vendre" class="btn" onclick="ajouter()">vendre la voiture</button>
-    </div>
+    </div><br>
 
-    <button id="a" class="exo btn" onclick=""></button></br>
+    <b id="hr" class="time">00</b>:<b id="min" class="time soixante">00</b>:<b id="sec" class="time soixante">00</b>
+    <br>
+
+    <button id="timer" class="exo btn" >COMMENCER LE CHRONO</button></br>
     <button id="" class="exo btn" onclick=""></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
