j'ai reussi a faire,le chrono

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
     <b id="hr" class="time">00</b>:<b id="min" class="time soixante">00</b>:<b id="sec" class="time soixante">00</b>
     <br>
 
-    <button id="timer" class="exo btn" >COMMENCER LE CHRONO</button></br>
-    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="timer" class="exo btn" >COMMENCER LE CHRONO</button> <button id="pause" class="exo btn" ></button>
+    </br>
+    </br>
     <button id="" class="exo btn" onclick=""></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
