--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <b id="hr" class="time">00</b>:<b id="min" class="time soixante">00</b>:<b id="sec" class="time soixante">00</b>
     <br>
 
-    <button id="timer" class="exo btn" >COMMENCER LE CHRONO</button> <button id="pause" class="exo btn" ></button>
+    <button id="timer" class="exo btn" >COMMENCER LE CHRONO</button> <button id="pause" class="exo btn" >ARRETER LE CHRONO</button>
     </br>
     </br>
     <button id="" class="exo btn" onclick=""></button></br>
