j'ai mis un jeu

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <button id="timer" class="exo btn" >COMMENCER LE CHRONO</button> <button id="pause" class="exo btn" >ARRETER LE CHRONO</button>
     </br>
     </br>
-    <button id="" class="exo btn" onclick=""></button></br>
+    <button id="" class="exo btn" onclick=""><a href="jeu.html" id="jeu">jeu simpathique</a></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
     <button id="" class="exo btn" onclick=""></button></br>
