J'ai ajouter une plaque d'immatriculations

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <button id="liste_de_voiture_et_formulaire" class="exo btn" onclick="laCentral()">liste de voiture avec formulaire pour ajouter des voiture et pour selectionner des voitures</button></br>
     
     <div class="formulaire-add-car">
+        <br>
+        <label name="plate" class="lbl">plaque d'immatriculation</label>
+        <input type="text" name="plate" id="plate" placeholder="EX:234-45-566" class="input-formulaire">
+        <br>
         <label name="marqu" class="lbl">marque</label>
         <input type="text" name="marqu" id="marqu" placeholder="EX:bmw" class="input-formulaire">
         <br>
