ajouter une div qui englobe les cathegorie pour les mettre en flex

--- a/index.html
+++ b/index.html
@@ -43,26 +43,28 @@
         <input type="file" name="image" id="image-file">
         <br>
         <p class="cathegorie-check">cathegorie</p>
-        <label name="economique" class="cathegorie-car lbl">economique</label>
-        <input class="input-cat" type="checkbox" name="economique" id="economique" value="economique">
+        <div id="cathegorie-box">
+            <label name="economique" class="cathegorie-car lbl">economique</label>
+            <input class="input-cat" type="checkbox" name="economique" id="economique" value="economique">
 
-        <label name="sport" class="cathegorie-car lbl">sport</label>
-        <input class="input-cat" type="checkbox" name="sport" id="sport" value="sport">
+            <label name="sport" class="cathegorie-car lbl">sport</label>
+            <input class="input-cat" type="checkbox" name="sport" id="sport" value="sport">
 
-        <label name="luxe" class="cathegorie-car lbl">luxe</label>
-        <input class="input-cat" type="checkbox" name="luxe" id="luxe" value="luxe">
+            <label name="luxe" class="cathegorie-car lbl">luxe</label>
+            <input class="input-cat" type="checkbox" name="luxe" id="luxe" value="luxe">
 
-        <label name="berline" class="cathegorie-car lbl">berline</label>
-        <input class="input-cat" type="checkbox" name="berline" id="berline" value="berline">
+            <label name="berline" class="cathegorie-car lbl">berline</label>
+            <input class="input-cat" type="checkbox" name="berline" id="berline" value="berline">
 
-        <label name="famille" class="cathegorie-car lbl">famille</label>
-        <input class="input-cat" type="checkbox" name="famille" id="famille" value="famille">
+            <label name="famille" class="cathegorie-car lbl">famille</label>
+            <input class="input-cat" type="checkbox" name="famille" id="famille" value="famille">
 
-        <label name="electric" class="cathegorie-car lbl">electric</label>
-        <input class="input-cat" type="checkbox" name="electric" id="electric" value="electric">
+            <label name="electric" class="cathegorie-car lbl">electric</label>
+            <input class="input-cat" type="checkbox" name="electric" id="electric" value="electric">
 
-        <label name="autre" class="cathegorie-car lbl autre" id="autre-label">autre</label>
-        <input class="input-cat" type="checkbox" name="autre" id="autre" value="autre" class="autre" >
+            <label name="autre" class="cathegorie-car lbl autre" id="autre-label">autre</label>
+            <input class="input-cat" type="checkbox" name="autre" id="autre" value="autre" class="autre" >
+         </div>
         <br>
         <button id="btn-vendre" class="btn" onclick="ajouter()">vendre la voiture</button>
     </div><br>
